made adjustments to subscription schema

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ MONGODB_URI=mongodb://localhost:27017/hack-subscriptions
 MONGO_CLIENT_SECRET=hackcheddar
 
 SECRET_KEY='hack-sub-secret-key'
+
+# Cloudinary
