--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "server": "node server"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
