--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "url": "^0.11.0"
   },
   "description": "",
   "main": "server.js",
