twilio message successfully sent

--- a/.env
+++ b/.env
@@ -6,6 +6,10 @@ GOOGLE_CLIENT_SECRET=iqySIv_t3hKs3CtAJI7lNxZ2
 MONGODB_URI=mongodb://localhost:27017/hack-subscriptions
 MONGO_CLIENT_SECRET=hackcheddar
 
-SECRET_KEY='hack-sub-secret-key'
+# Twilio
+TWILIO_ACCOUNT_SID=ACca8133ab01658f61dfb40b142bfc4af1
+TWILIO_PHONE_NUMBER=+19174515767
+TWILIO_AUTH_TOKEN=e5ef1fbf6da063300004f53fbf991eac
 
-# Cloudinary
+
+SECRET_KEY='hack-sub-secret-key'
