--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # dependencies
+.env
 /node_modules
 /.pnp
 .pnp.js
@@ -9,7 +10,6 @@
 
 # production
 /build
-
 # misc
 .DS_Store
 .env.local
