--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
