--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server",
-    "server": "node server"
+    "start:prod": "node server",
+    "start:dev": "npm start",
+    "start": "nodemon server"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -17,11 +18,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
